# cel

./: .gitignore  Cargo.toml  README.md  bundle.sh
cel_app/: Cargo.toml
cel_app/src/: app.rs  app_state.rs  button.rs  clipboard.rs  input.rs  layout.rs  logging.rs  main.rs  tab_group.rs  terminal_context.rs  terminal_widget.rs  window.rs
cel_app/src/imui/: button.rs  layout.rs  mod.rs  traits.rs
cel_app/src/window/: linux.rs  macos.rs  mod.rs  windows.rs
cel_core/: Cargo.toml
cel_core/src/: commands.rs  config.rs  lib.rs
cel_core/src/ansi/: ansi_consume.rs  ansi_produce.rs  mod.rs  terminal_grid.rs
cel_core/tests/: test_cursor.rs
cel_core/tests/common/: mod.rs
cel_renderer/: Cargo.toml
cel_renderer/src/: font.rs  glyph_storage.rs  lib.rs  renderer.rs  resources.rs  shaders.rs  texture.rs  util.rs
src/: ansi.rs  app.rs  app_state.rs  commands.rs  font.rs  logging.rs  main.rs  renderer.rs  util.rs  window.rs
test/: loading.py
