[package]
name = "cel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
glfw = "0.54"
gl = "0.10"
log = "0.4"
lru = "0.12"
rust-fontconfig = { git = "https://github.com/TheApplePieGod/rust-fontconfig.git" }
ttf-parser = "0.18"
msdfgen = { version = "0.2.1", default-features = false, features = ["ttf-parser"] }
half = "2.3.1"
portable-pty = "0.8.1"
anstyle-parse = "0.2.3"
image = { version = "0.24.7", default-features = false, features = ["png"] }
