[package]
name = "cel_app"
description = "cel terminal"
version = "0.1.0"
edition = "2021"

[dependencies]
cel_core = { verison = "0.1.0", path = "../cel_core" }
cel_renderer = { verison = "0.1.0", path = "../cel_renderer" }
chrono = "0.4"
glfw = "0.54"
gl = "0.10"
log = "0.4"

[package.metadata.bundle]
name = "cel"
identifier = "com.theapplepiegod.cel"
osx_minimum_system_version="10.11"
