[package]
name = "cel"
description = "cel terminal"
version = "0.2.1"
edition = "2021"

[dependencies]
cel_core = { verison = "0.1.0", path = "../cel_core" }
cel_renderer = { verison = "0.1.0", path = "../cel_renderer" }
cli-clipboard = "0.4"
anyhow = "1.0"
chrono = "0.4"
enum-map = "2.7.3"
glfw = "0.54"
gl = "0.10"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.0"
objc = "0.2.7"

[package.metadata.bundle]
name = "cel"
icon = ["icons/32x32.png", "icons/128x128.png", "icons/256x256.png"]
identifier = "com.theapplepiegod.cel"
osx_minimum_system_version = "10.11"
resources = ["resources/*"]
