[package]
name = "cel_renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
cel_core = { version = "0.1.0", path = "../cel_core" }
log = "0.4"
gl = "0.10"
lru = "0.12"
rust-fontconfig = { git = "https://github.com/TheApplePieGod/rust-fontconfig.git" }
ttf-parser = "0.18"
msdfgen = { version = "0.2.1", default-features = false, features = ["ttf-parser"] }
half = "2.3.1"
image = { version = "0.24.7", default-features = false, features = ["png"] }
