[package]
name = "cel_renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
cel_core = { version = "0.1.0", path = "../cel_core" }
log = "0.4"
gl = "0.10"
lru = "0.12"
cosmic-text = { version = "0.14.1", default-features = false, features = ["fontconfig", "std", "shape-run-cache"] }
ttf-parser = { version = "0.21.1", features = ["gvar-alloc"] }
msdfgen = { git = "https://github.com/TheApplePieGod/msdfgen-rs.git", default-features = false, features = ["ttf-parser", "bindgen"] }
half = "2.3.1"
image = { version = "0.24.7", default-features = false, features = ["png"] }
